--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>U Kramarzy - Bukowina Tatrzańska, pensjonat, galanteria skórzana, pokoje</title>
 </head>
-<body data-spy="scroll" data-target="#header" data-offset="70">
+<body data-spy="scroll" data-target="#header" data-offset="90">
     <div data-spy="affix" style="width: 100%;">
         <div class="container">
             <nav class="navbar navbar-default" id="header">
@@ -35,8 +35,7 @@
                             <li><a href="#pokoje">Pokoje</a></li>
                             <li><a href="#cennik">Cennik</a></li>
                             <li><a href="#galanteria">Galanteria skórzana</a></li>
-                            <li><a href="#dojazd">Dojazd</a></li>
-                            <li><a href="#kontakt">Kontakt</a></li>
+                            <li><a href="#dojazd">Kontakt i dojazd</a></li>
                         </ul>
                     </div>
                 </div>
@@ -49,78 +48,94 @@
                 <img class="img-responsive" src="images/pensjonat.jpg">
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="images/galanteria-skorzana.jpg">
+                <p class="lead">
+                    <strong style="display: block; margin-bottom: 15px;">Pensjonat U Kramarzy to pięknie położony ośrodek wypoczynkowy z widokiem na Tatry.</strong>
+                    Przez lata funkcjonowania zyskał sobie stałych klientów, dzięki gościnności swoich gospodarzy.
+                    Dobra lokalizacja pensjonatu sprawia, że jest on świetną bazą wypadową na narty, górskie szlaki czy do pobliskich term.
+                </p>
             </div>
         </div>
         <h2 id="pokoje">Pokoje</h2>
-        <p>
-            <strong>Pensjonat U Kramarzy</strong> to pięknie położony ośrodek wypoczynkowy, z którego roztacza się doskonały widok na Tatry.
-            Przez lata funkcjonowania zyskał sobie stałych klientów, dzięki gościnności swoich gospodarzy.
-            Dobra lokalizacja pensjonatu sprawia, że jest on świetną bazą wypadową na narty, górskie szlaki czy do pobliskich term.
-        </p>
-        <div class="row">
+
+        <div class="row features">
             <div class="col-md-3 col-sm-4 col-xs-6">
-                Parking
+                <div class="well">
+                    Parking
+                </div>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6">
-                Internet
+                <div class="well">
+                    Internet
+                </div>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6">
-                Altana
+                <div class="well">
+                    Altana
+                </div>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6">
-                Plac zabaw
+                <div class="well">
+                    Plac zabaw
+                </div>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6">
-                Grill
+                <div class="well">
+                    Grill
+                </div>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6">
-                Aneks kuchenny
+                <div class="well">
+                    Aneks kuchenny
+                </div>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6">
-                Łazienka i TV w każdym pokoju
+                <div class="well">
+                    Łazienka i TV w każdym pokoju
+                </div>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6">
-                Świetlica i tenis stołowy
+                <div class="well">
+                    Świetlica i tenis stołowy
+                </div>
             </div>
         </div>
-        <div class="picture row" itemscope itemtype="http://schema.org/ImageGallery">
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+        <div class="pictures row" itemscope itemtype="http://schema.org/ImageGallery">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/pensjonat-1.jpg" itemprop="contentUrl" data-size="1200x1800" data-index="0">
                     <img src="images/thumbnails/pensjonat-1.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/pensjonat-2.jpg" itemprop="contentUrl" data-size="1200x1800" data-index="0">
                     <img src="images/thumbnails/pensjonat-2.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/pensjonat-3.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/pensjonat-3.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/pensjonat-4.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/pensjonat-4.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/pensjonat-5.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/pensjonat-5.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/pensjonat-6.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/pensjonat-6.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/pensjonat-7.jpg" itemprop="contentUrl" data-size="1200x1800" data-index="0">
                     <img src="images/thumbnails/pensjonat-7.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/pensjonat-8.jpg" itemprop="contentUrl" data-size="1200x1800" data-index="0">
                     <img src="images/thumbnails/pensjonat-8.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
@@ -201,77 +216,78 @@
             </tbody>
         </table>
         <h2 id="galanteria">Galanteria skórzana</h2>
-        <div class="picture row" itemscope itemtype="http://schema.org/ImageGallery">
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+        <div class="pictures row" itemscope itemtype="http://schema.org/ImageGallery">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/galanteria-1.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/galanteria-1.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/galanteria-2.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/galanteria-2.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/galanteria-3.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/galanteria-3.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/galanteria-4.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/galanteria-4.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/galanteria-5.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/galanteria-5.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/galanteria-6.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/galanteria-6.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/galanteria-7.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/galanteria-7.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/galanteria-8.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/galanteria-8.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/galanteria-9.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/galanteria-9.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/galanteria-10.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/galanteria-10.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/galanteria-11.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/galanteria-11.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
-            <figure class="col-xs-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <figure class="col-md-2 col-sm-3 col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="images/pictures/galanteria-12.jpg" itemprop="contentUrl" data-size="1800x1200" data-index="0">
                     <img src="images/thumbnails/galanteria-12.jpg" class="img-responsive" itemprop="thumbnail" alt="Beach">
                 </a>
             </figure>
         </div>
-        <h2 id="dojazd">Dojazd</h2>
-        <p>
-            Wierch Spiski 39
+        <h2 id="dojazd">Kontakt i dojazd</h2>
+        <div class="well lead">
+            ul. Wierch Spiski 39
+            <br>
             34-530 Bukowina Tatrzańska
-        </p>
+        </div>
         <div id="map"></div>
         <style>
         #map {
-            height: 600px;
+            height: 400px;
             width: 100%;
         }
         </style>
